--- a/dev/gateway-dev.yml
+++ b/dev/gateway-dev.yml
@@ -25,23 +25,23 @@ spring:
   cloud:
     gateway:
       routes:
-      - id: customer-management
-        uri: lb://CUSTOMER-MANAGEMENT
+      - id: customer-service
+        uri: lb://CUSTOMER-SERVICE
         predicates:
         - Path=/customer/**
       - id: product-catalogue
         uri: lb://PRODUCT-CATALOGUE
         predicates:
         - Path=/product/**
-      - id: delivery-management
-        uri: lb://DELIVERY-MANAGEMENT
+      - id: delivery-service
+        uri: lb://DELIVERY-SERVICE
         predicates:
         - Path=/delivery/**
-      - id: inventory-management
-        uri: lb://INVENTORY-MANAGEMENT
+      - id: inventory-service
+        uri: lb://INVENTORY-SERVICE
         predicates:
         - Path=/inventory/**
-      - id: order-management
-        uri: lb://ORDER-MANAGEMENT
+      - id: order-service
+        uri: lb://ORDER-SERVICE
         predicates:
         - Path=/order/**
