--- a/dev/order-service-dev.yml
+++ b/dev/order-service-dev.yml
@@ -36,9 +36,11 @@ management:
     
 spring:
   jpa:
+    show-sql: true
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     properties:
         hibernate.default_schema: order
+        hibernate.format_sql: true
     hibernate:
       ddl-auto: update
       naming:
