--- a/dev/order-service-dev.yml
+++ b/dev/order-service-dev.yml
@@ -47,7 +47,7 @@ spring:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/eventuate?useSSL=false
+    url: jdbc:postgresql://localhost:5432/eventuateSaga?useSSL=false
     username: postgres
     password: admin
     
