--- a/dev/customer-service-dev.yml
+++ b/dev/customer-service-dev.yml
@@ -54,3 +54,9 @@ spring:
 eventuate:
     database: 
         schema: eventuate
+        
+# ActiveMQ Properties
+activemq:
+  url: tcp://localhost:61616
+  user: admin
+  password: admin
